# QuantumClaimVerifier

./: CMakeLists.txt  README.md  architecture.json
src/: main.cpp
src/core/: QuantumClaim.h  ReplicationAnalyzer.h  StatisticalValidator.h
src/io/: ClaimParser.h
src/utils/: ConfidenceScorer.h
